	common/src/tool-config-file-common.c: driver address input cannot
	be 0.

	* bmc-watchdog/src/bmc-watchdog.h,
	bmc-watchdog/src/bmc-watchdog-argp.h,
	bmc-watchdog/src/bmc-watchdog-argp.c: New files.

	* bmc-watchdog/: Support config file.  Use argp.

	* bmc-watchdog/, common/src/tool-cmdline-common.c,
	common/src/tool-config-file-common.c: Support bmc-watchdog
	specific options.
	
2008-05-27  Albert Chu <chu11@llnl.gov>

        * ipmi-sensors/ipmi-sensors.8.pre.in: Fix typo.

	* common/src/tool-config-file-common.h,
	common/src/tool-config-file-common.c, ipmi-sensors/: Add config
	file support for ipmi-sensors specific options.

	* common/src/tool-config-file-common.h,
	common/src/tool-config-file-common.c, ipmimonitoring/: Add config
	file support for ipmimonitoring specific options.

	* doc/freeipmi.conf.5.pre.in: Update appropriately.
	
2008-05-27  Albert Chu <chu11@llnl.gov>

	* ipmi-fru/src/ipmi-fru-multirecord-area.c
	(output_management_access_record): Fix output corner case.

	* doc/: Tweaks.

	* ipmi-sensors/, ipmimonitoring/: Variable name consistency cleanup.
	
2008-05-27  Albert Chu <chu11@llnl.gov>

	* ipmi-fru/src/ipmi-fru-util.c
	(ipmi_fru_output_type_length_field): Fix output corner case.

	* ipmi-fru/: Adjust verbose vs default output.
	
2008-05-26  Albert Chu <chu11@llnl.gov>

	* ipmi-fru/src/ipmi-fru.c (_output_fru): Change output to always
	output device id first.
	
2008-05-24  Albert Chu <chu11@llnl.gov>

	* doc/, common/doc/: Document Sun Fire X4150 and X4450 workarounds.
	
2008-05-24  Albert Chu <chu11@llnl.gov>

	* common/src/tool-config-file-common.h,
	common/src/tool-config-file-common.c, ipmi-fru/: Add config file
	option for --skip-checks.

	* doc/freeipmi.conf.5.pre.in: Update appropriately for additions.
	
2008-05-23  Albert Chu <chu11@llnl.gov>

	* common/doc/manpage-common-workaround-heading-text.man: Tweak
	description.

	* bmc-config/, pef-config/, ipmi-sensors-config/: Add config file
	support.
	