@@ -1,6 +1,6 @@
 dnl Process this file with autoconf to produce a configure script.
 AC_INIT([freeipmi],[0.7.0.beta1],[freeipmi-devel@gnu.org])
-AC_REVISION([$Id: configure.ac,v 1.122 2008-05-21 23:35:20 chu11 Exp $])
+AC_REVISION([$Id: configure.ac,v 1.123 2008-05-29 05:50:18 chu11 Exp $])
 
 dnl We require a modern autoconf and automake
 AC_PREREQ([2.57])
@@ -351,6 +351,7 @@ ACX_PTHREAD([], AC_MSG_ERROR([Posix threads required to build libipmiconsole]))
 
 dnl Misc checks and build options
 AC_FREEIPMI_CONFIG_FILE
+AC_BMC_WATCHDOG_LOGFILE_DEFAULT
 AC_IPMI_MONITORING_SDR_CACHE_DIR
 AC_IPMI_MONITORING_SENSOR_CONFIG_FILE
 AC_IPMIDETECT_CONFIG_FILE
