@@ -15,6 +15,10 @@
 	* bmc-watchdog/, common/src/tool-cmdline-common.c,
 	common/src/tool-config-file-common.c: Support bmc-watchdog
 	specific options.
+
+	* config/ac_bmc_watchdog_logfile.m4: New file.
+
+	* bmc-watchdog/: Use BMC_WATCHDOG_LOGFILE_DEFAULT.
 	
 2008-05-27  Albert Chu <chu11@llnl.gov>
 
